--- a/style.css
+++ b/style.css
@@ -1,53 +1,23 @@
-/* Fuente desde Google Fonts con su diferentes variantes */
-.quantico-regular {
-    font-family: "Quantico", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  .quantico-bold {
-    font-family: "Quantico", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  .quantico-regular-italic {
-    font-family: "Quantico", sans-serif;
-    font-weight: 400;
-    font-style: italic;
-  }
-  
-  .quantico-bold-italic {
-    font-family: "Quantico", sans-serif;
-    font-weight: 700;
-    font-style: italic;
-  }
-
-.silkscreen-regular { /* Fuente que exporté de Google Fonts para el título de la web */
-    font-family: "Silkscreen", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-
-.jersey-15-regular {
-    font-family: "Jersey 15", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }  
-/* --------------------------------------------------------- */
 * {
     box-sizing: border-box;
 }
 
-body {
-    margin: 0;
-    padding: 0;
-    background-color: #f1f1f1;
-    min-height: 100vh;
+a {
+    text-decoration: none;
+    color: inherit;
 }
 
-/* Nav en horizontal usando flex */
-nav ul {
+body {
+    background-color: #f1f1f1;
+    margin: 0;
+    padding: 0;
+}
+
+h1 {
+    text-align: center;
+}
+
+nav ul { /* Nav en horizontal usando Flex */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -73,57 +43,51 @@ nav li a:hover {
     background-color: #111;
 }
 
-h1 {
-    text-align: center;
+main p, ul {
+    font-family: "Quantico", sans-serif;
 }
-
-/* Título + Logo */ 
+/* --------------------------------------------------------- */
+/* Título + Logo (Header) */ 
 .titulo {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
-    padding: 10px 50px;
+    justify-content: center;
+    padding: 10px 20px;
     margin: 0 auto;
     max-width: 1200px;
     font-size: xx-large;
 }
 
 .titulo img {
-    max-width: 250px;
+    max-width: 110px;
     height: auto;
+    margin-right: 20px;
 }
 
 .titulo h1 {
     font-size: 2em;
     margin: 0;
 }
-
-main p, ul {
-    font-family: "Quantico", sans-serif;
-}
-
+/* --------------------------------------------------------- */
+/* Noticias Destacadas (Main) */
 #destacados {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
     background-color: #f4f4f4;
-    margin: 25px;
-    border-radius: 10%;
 }
 
 #destacados section {
     width: 33%;
     padding: 5px;
-    border: 3px solid black;
-    border-radius: 1%;
 }
 
-.destacada-centro article{
-    min-height: 100%;
+#destacados .destacada-centro-texto {
+    height: 700px;
+    overflow: hidden;
 }
-.destacada-izq{
-    /*  distribicion de elementos en una columna uniformemente (filas iguales) */
+.destacada-izq{ /* Distribición de elementos en una columna uniforme (filas iguales) */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -149,7 +113,6 @@ main p, ul {
     background-color: #e0e0e0;
     border-radius: 8px 8px 0 0;
     text-align: center;
-    border-radius: 1%;
 }
 
 #destacados article { 
@@ -157,20 +120,23 @@ main p, ul {
     border: 1px solid black;
     padding: 0 5px;
 }
+
 #destacados article:hover {
 box-shadow: 4px 4px 0 0 grey;
 }
+
 #destacados .leer-mas {
     text-align: end;
     margin-right: 5%;
 }
+
 #destacados img {
     width: 90%;
     margin: 5%;
     border-radius: 4px;
 }
 /* --------------------------------------------------------- */
-/* NOTICIAS GENERALES (MAIN)*/
+/* Noticias Generales (Main)*/
 main h2,
 #generales h3 {
     font-family: "Jersey 15", sans-serif;
@@ -181,39 +147,39 @@ main h2,
 
 #generales {
     display: flex;
-    justify-content: space-between;
     margin: 20px;
     color: black;
     background-color: #f1f1f1;
+    flex-wrap: wrap;
+    justify-content: flex-start;
 }
 
-h2.ocultar { /* Oculto el título en el front pero lo dejo en HTML */
+h2.ocultar { /* Se oculta el título en el front */
     display: none;
 }
 
 .columnas-main {
-    flex: 1;
-    margin: 5px;
+    margin: 2px;
+    width: 33%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     background-color: #e0e0e0;
-    padding: 5px;
+    padding: 9px;
     border-radius: 10px;
-    height: auto;
-    border: 3px solid black;
+    border: 2px solid black;
 }
 
 .columnas-main h2 {
     font-size: 1.5em;
-    margin-bottom: 15px;
+    margin: 5px;
     text-align: center;
 }
 
 .cripto-container {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 5px;
 }
 
 .cripto-news {
@@ -229,9 +195,9 @@ h2.ocultar { /* Oculto el título en el front pero lo dejo en HTML */
 }
 
 .cripto-news img {
+    margin: 4px;
     width: 100%;
-    height: auto;
-    border-radius: 8px;
+    border-radius: 4px;
 }
 
 .cripto-news h3 {
@@ -284,10 +250,12 @@ h2.ocultar { /* Oculto el título en el front pero lo dejo en HTML */
 }
 
 .fotos-tecnologia {
-    max-height: 160px;
+    margin: 4px;
+    max-height: 150px;
+    border-radius: 4px;
 }
 /* --------------------------------------------------------- */
-/* FOOTER */
+/* Footer */
 footer {
     background-color: #f1f1f1;
     padding: 25px;
@@ -323,7 +291,7 @@ footer h2, h3 {
     margin: 0;
 }
 
-.redes {
+.redes { 
     width: 100%;
     background-color: #ffffff;
     padding: 20px;
@@ -347,12 +315,16 @@ footer h2, h3 {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 0px 30px;
+    margin: 0 15px; 
 }
 
 .redes img {
-  width: 20px;
-  margin: 10px;
+    width: 20px;
+    margin-right: 5px;
+}
+
+.redes span {
+    font-size: 1em;
 }
 
 #copyright { /* Sección Copyright */
@@ -360,3 +332,49 @@ footer h2, h3 {
     font-style: italic;
     font-size: 15px;
 }
+/* --------------------------------------------------------- */
+/* Fuente (Google Fonts) utilizadas para la web */
+.quantico-regular {
+    font-family: "Quantico", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+.silkscreen-regular {
+    font-family: "Silkscreen", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+.jersey-15-regular {
+    font-family: "Jersey 15", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }  
+/* --------------------------------------------------------- */
+/* Responsive probado en Edge y Fireforx */
+  @media only screen and (max-width: 768px) {
+    .titulo {
+        font-size: medium;
+    }
+    #destacados section {
+        width: 100%;
+        padding: 5px;
+    }
+    .columnas-main {
+        width: 100% !important;
+        padding: 5px !important; 
+    }
+    .footer-contenedor {
+        width: 100% !important;
+        padding: 5px !important; 
+    }
+    .redes span { /* Decidimos esconder los usuarios de las redes sociales para el responsive */ 
+    display: none;
+    }
+    .redes ul {
+    flex-direction: row;
+    justify-content: center;
+    }
+  }
+  /* --------------------------------------------------------- */
