--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
     box-sizing: border-box;
 }
 
-a {
-    text-decoration: none;
+a { /* Le quitamos el underline a todos los links */
+    text-decoration: none !important;
     color: inherit;
 }
 
-body {
+body { 
     background-color: #f1f1f1;
     margin: 0;
     padding: 0;
@@ -24,7 +24,8 @@ nav ul { /* Nav en horizontal usando Flex */
     background-color: #333;
     list-style-type: none;
     padding: 0;
-    margin: 0;
+    margin-bottom: 5px;
+    border-radius: 5px;
 }
 
 nav li {
@@ -81,6 +82,9 @@ main p, ul {
 #destacados section {
     width: 33%;
     padding: 5px;
+    border-radius: 10px;
+    border: 2px solid black;
+    background-color: #e0e0e0;
 }
 
 #destacados .destacada-centro-texto {
@@ -119,6 +123,7 @@ main p, ul {
     border-radius: 8px;
     border: 1px solid black;
     padding: 0 5px;
+    background-color: white;
 }
 
 #destacados article:hover {
@@ -147,11 +152,11 @@ main h2,
 
 #generales {
     display: flex;
-    margin: 20px;
+    margin-top: 10px;
     color: black;
     background-color: #f1f1f1;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-between;
 }
 
 h2.ocultar { /* Se oculta el título en el front */
@@ -159,7 +164,6 @@ h2.ocultar { /* Se oculta el título en el front */
 }
 
 .columnas-main {
-    margin: 2px;
     width: 33%;
     display: flex;
     flex-direction: column;
@@ -261,7 +265,6 @@ footer {
     padding: 25px;
     margin-top: 40px;
     color: black;
-    
 }
 
 footer h2, h3 { 
@@ -269,15 +272,16 @@ footer h2, h3 {
     justify-content: center;
     font-size: 25px;
 }
- 
+
 .footer-contenedor { 
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin: 20px;
 }
 
 .contactos-nosotros {
-    width: 45%;
+    width: 45%; /* Mantén el ancho para pantallas grandes */
     background-color: #ffffff;
     padding: 20px;
     margin-bottom: 10px;
@@ -354,7 +358,7 @@ footer h2, h3 {
 /* --------------------------------------------------------- */
 /* Responsive probado en Edge y Fireforx */
   @media only screen and (max-width: 768px) {
-    .titulo {
+    .titulo { /* Responsive para el título de la web */
         font-size: medium;
     }
     #destacados section {
@@ -375,6 +379,16 @@ footer h2, h3 {
     .redes ul {
     flex-direction: row;
     justify-content: center;
+    }
+    .footer-contenedor { /* Responsive para "Contactos" y "¿Quiénes somos?" */
+        flex-direction: column; 
+        margin: 0; 
+    }
+
+    .contactos-nosotros {
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 20px;
     }
   }
   /* --------------------------------------------------------- */
